--- a/src/gui/app/lang/locale-en.json
+++ b/src/gui/app/lang/locale-en.json
@@ -14,7 +14,7 @@
       "EVENTS": "Events",
       "PRESET_EFFECT_LISTS": "Preset Effect Lists",
       "EFFECT_QUEUES": "Effect Queues",
-      "TIMERS": "Timers",
+      "TIME_BASED": "Time-Based",
       "HOTKEYS": "Hotkeys",
       "CHANNELREWARDS": "Channel Rewards"
     },
