--- a/src/gui/app/lang/locale-en.json
+++ b/src/gui/app/lang/locale-en.json
@@ -21,7 +21,7 @@
     "MANAGEMENT": {
       "MANAGEMENT": "Management",
       "VIEWER_GROUPS": "Viewer Groups",
-      "VIEWER_ROLES": "Viewer Roles",
+      "VIEWER_ROLES": "Roles & Ranks",
       "MODERATION": "Moderation",
       "VIEWERS": "Viewers",
       "SETTINGS": "Settings",
