feat: add protocol deep links for trigger pages

--- a/src/gui/app/lang/locale-en.json
+++ b/src/gui/app/lang/locale-en.json
@@ -16,7 +16,8 @@
       "EFFECT_QUEUES": "Effect Queues",
       "TIME_BASED": "Time-Based",
       "HOTKEYS": "Hotkeys",
-      "CHANNELREWARDS": "Channel Rewards"
+      "CHANNELREWARDS": "Channel Rewards",
+      "COUNTERS": "Counters"
     },
     "MANAGEMENT": {
       "MANAGEMENT": "Management",
