chore: remove legacy frontend websocketService

--- a/src/gui/app/lang/locale-en.json
+++ b/src/gui/app/lang/locale-en.json
@@ -32,7 +32,7 @@
     },
     "CONNECTIONS": {
       "CONNECTIONS": "Connections",
-      "MIXER_TOGGLE": "Click to toggle connections",
+      "TOGGLE": "Click to toggle connections",
       "OPEN_CONNECTION_PANNEL": "Open Connection Panel"
     },
     "ABOUT": "About"
